--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Official Szalámi Website</title>
-    <link rel="icon" href="/shiningsausage.gif">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     
