--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html>
   <head>
-    <title>Official Szalámi Website</title>
+    <title>uoip</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <h1>Official Szalámi Website</h1>
   </body>
 </html>
