--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Official Szalámi Website</h1>
+    <p>Welcome To The Official Salami Website.</p>
+    <table>
+      <tr>
+        <tr><a></a></tr>
+      </tr>
+    </table>
   </body>
 </html>
